# backend-dashboard-financeiro

./: .gitignore  ALEMBIC_GUIDE.md  README.md  alembic.ini  main.py  organize_git.ps1  organize_git_v2.ps1  pyproject.toml
alembic/: env.py
alembic/versions/: 04c54eba65d8_adicionando_a_opção_de_tipo_de_.py  0970ee4ca956_refactor_merchant_categories_and_fix_.py  0b09e7de7ead_rename_payments_to_transactions.py  0be917584281_global_server_defaults_only.py  0c1b21122f37_o_nome_do_merchant_é_único_apenas_por_.py  13710dd1d76d_add_merchant_normalization_system.py  184d41fe51e1_add_server_defaults_to_open_finance_.py  1ad1f7ebbe02_criando_a_tabela_de_user_category_.py  1dde0e3f8c2c_adicionando_a_opção_de_descrição_para_o_.py  1f62d8b0dfeb_fix_payment_method_enum.py  38cbdc721974_adicionando_o_campo_de_slug_e_cor_.py  486074e95f0c_add_profile_image_url_to_user.py  504f35b44f38_add_category_type.py  5925182a2bbd_remoção_dos_slugs_da_categoria_novamente.py  5a9a5a4594b8_add_unique_constraint_merchant_alias.py  5d9d4215e9d6_create_open_finance_tables.py  798129d08469_add_category_id_to_merchant_aliases.py  7f92a9c37867_initial_migration.py  84c8510c110d_remover_campo_slug_da_categoria.py  8fb7ba9ee198_normalize_enum_casing.py  94a7b575b097_adicionando_indices_na_tabela_de_.py  94c7d476d503_alterando_campo_date_da_tabela_de_.py  95a97440f1e6_create_open_finance_accounts.py  98218dadb087_add_merchant_alias_system_with_1_n_.py  9e754df95b08_add_flags_to_user_category_settings.py  a47b99857605_add_open_finance_id_to_payments.py  a9fafca2fc20_adicionando_campo_de_slug_na_categoria_.py  ad7776d61e81_remove_description_from_transactions.py  adfa8daea0fd_convert_datetime_columns_to_timezone_.py  (+12 more)
scripts/: dump_transactions.py
src/: api.py  config.py  logging.py
tests/: README.md  conftest.py  test_alias_services.py  test_auth_services.py  test_categories_services.py  test_dashboard_services.py  test_transactions_services.py  test_users_services.py
(+106 files in other folders)
